force-app/main/default/objects/OfferLineItem__c/OfferLineItem__c.object-meta.xml
<CustomObject>
    <label>Offer Line Item</label>
    <nameField>
        <displayFormat>OLI-{0000}</displayFormat>
        <label>Offer Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offer Line Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>