force-app/main/default/objects/OfferLineItem__c/fields/Brand_Origin__c.field-meta.xml
<CustomField>
    <fullName>Brand_Origin__c</fullName>
    <label>Brand/Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>