force-app/main/default/objects/OfferLineItem__c/fields/For_Offer__c.field-meta.xml
<CustomField>
    <fullName>For_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Offer</label>
    <type>Checkbox</type>
</CustomField>