force-app/main/default/objects/OfferLineItem__c/fields/INCO__c.field-meta.xml
<CustomField>
    <fullName>INCO__c</fullName>
    <label>INCO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>