force-app/main/default/objects/OfferLineItem__c/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offer</label>
    <referenceTo>Offer__c</referenceTo>
    <relationshipLabel>Offer Line Item</relationshipLabel>
    <relationshipName>Offer_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>