force-app/main/default/objects/OfferLineItem__c/fields/Packaging_Pallets__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Pallets__c</fullName>
    <label>Packaging Pallets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>