force-app/main/default/objects/OfferLineItem__c/fields/Spec_ID__c.field-meta.xml
<CustomField>
    <fullName>Spec_ID__c</fullName>
    <label>Spec - ID#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>