force-app/main/default/objects/OfferLineItem__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <label>Volume</label>
    <type>TextArea</type>
</CustomField>